@@ -2,5 +2,5 @@
   <div class="header">
     <img id="applogo" src="{$appLogo|escape:'html'}" alt="Application logo"/>
     <img id="lblogo" src="icons/likeback.png" alt="LikeBack logo"/>
-    <div id="lbinfo">Logged in as {$developer->login} - <a href="options.php">Settings</a></div>
+    <div id="lbinfo">Logged in as {$developer->login} - <a href="options.php">Settings</a> - <a href="stats.php">Statistics</a></div>
   </div>
